--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
                         </a>
 
                     </div>
-                    <div class="input" style="width: 50%; display: flex; justify-content: center; align-items: center;">
-                        <input class="search" type="search" style="padding: 10px 20px; border-radius: 20px; width: 60%;" placeholder="search...">
+                    <div class="input">
+                        <input class="search" type="search" placeholder="search...">
                     </div>
                 </div>
                 <div class="blog-carts">
